Design: Main page format design
메인 페이지, 스크롤 디자인 및 라우팅 구성

Related to: #174, 184

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -2,21 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
-  display: flex;
-  justify-content: center;
-
-}
-
 body{
-  width: 40%;
+  margin: 0;
 }
 
 #root {
-  padding: 16px 16px 16px 16px;
-  height: 100%;
-}
-
-@media (max-width: 768px){
-  width:100%;
+  background: white;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
