--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body{
   margin: 0;
+  font-family: 'Gaegu', cursive;
 }
 
 #root {
@@ -11,6 +13,5 @@ body{
   width: 100vw;
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
